# easyfind-client

./: .gitignore  Makefile.am  configure.ac  ef.c
debian/: changelog  control  easyfind-client.init  easyfind-client.service  easyfind-client.tmpfile
